单个文章修改功能实现

--- a/static/html/article.html
+++ b/static/html/article.html
@@ -83,11 +83,11 @@
         </div>
         <div class="article-html">
             <div id="md-content" style="width: 80%;text-align: center">
-                <textarea style="display:none;" placeholder="markdown语言">{{article.ArticleContent}}</textarea>
+                <textarea style="display:none;" placeholder="markdown语言">{{article.article_content}}</textarea>
             </div>
         </div>
     </div>
-    <div class="article-right col-md-2 black"></div>
+    <div class="article-right col-md-2 "></div>
 </div>
 </body>
 <script type="text/javascript">
