--- a/static/html/adminArticle.html
+++ b/static/html/adminArticle.html
@@ -7,136 +7,145 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="../js/common.js"></script>
 <div id="app">
-<table  class="my-table table table-hover  table-bordered table-striped" >
-    <h1>文章管理</h1>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>标题</th>
-        <th>类型</th>
-        <th>作者</th>
-        <th>删除</th>
-        <th>修改</th>
-        <th>修改封面</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr v-for="article in articles">
-        <td>{{article.Id}}</td>
-        <td>{{article.ArticleTitle}}</td>
-        <td>{{article.ArticleType}}</td>
-        <td>{{article.ArticleAuthor}}</td>
-        <td><span :article-id="article.Id" class="glyphicon glyphicon-trash" style="cursor:hand;"
-                  onclick="deleteArticle(this)"></span></td>
-        <td><span :article-id="article.Id" data-toggle="modal" data-target="#myModal" onclick="echoFormData(this)"
-                  class="glyphicon glyphicon-pencil" style="cursor:hand"></span></td>
-        <td><span :article-id="article.Id" class="glyphicon glyphicon-scissors" onclick="updateCover(this)" style="cursor:hand;" data-toggle="modal"
-                  data-target="#coverModal"></span></td>
-    </tr>
-    </tbody>
-</table>
+    <table class="my-table table table-hover  table-bordered table-striped">
+        <h1>文章管理</h1>
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>标题</th>
+            <th>类型</th>
+            <th>作者</th>
+            <th>删除</th>
+            <th>修改</th>
+            <th>修改封面</th>
+            <th>改文章</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr v-for="article in articles">
+            <td>{{article.Id}}</td>
+            <td>{{article.ArticleTitle}}</td>
+            <td>{{article.ArticleType}}</td>
+            <td>{{article.ArticleAuthor}}</td>
+            <td><span :article-id="article.Id" class="glyphicon glyphicon-trash" style="cursor:hand;"
+                      onclick="deleteArticle(this)"></span></td>
+            <td><span :article-id="article.Id" data-toggle="modal" data-target="#myModal" onclick="echoFormData(this)"
+                      class="glyphicon glyphicon-pencil" style="cursor:hand"></span></td>
+            <td><span :article-id="article.Id" class="glyphicon glyphicon-scissors" onclick="updateCover(this)"
+                      style="cursor:hand;" data-toggle="modal"
+                      data-target="#coverModal"></span></td>
+            <td><span :article-id="article.Id" class="glyphicon glyphicon-pencil" onclick="writeArticle(this)"></span>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
-<!--修改模态框-->
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="myModalLabel">修改文章属性</h4>
-            </div>
-            <form class="articleForm" action="" method="post" enctype="multipart/form-data"
-                  target="nm_iframe">
-                <div class="modal-body">
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="article_title">文章标题</label>
-                            <input name="article_title" class="form-control" id="article_title" value=""
-                                   placeholder="标题">
-                        </div>
-                        <div class="form-group">
-                            <label for="article_simple_content">简短描述</label>
-                            <input name="article_simple_content" class="form-control" id="article_simple_content" value=""
-                                   placeholder="描述">
-                        </div>
-                        <div class="form-group">
-                            <label for="article_author">作者</label>
-                            <input name="article_author" class="form-control" id="article_author" value="" placeholder="作者">
-                        </div>
-                        <div class="form-group">
-                            <label for="type_id">文章类型</label>
-                            <!--todo 后端生成文章类型列表-->
-                            <select name="type_id" id="type_id">
-                                <option value="1">技术杂谈</option>
-                                <option value="2">Java</option>
-                                <option value="3">GO</option>
-                                <option value="4">JavaScript</option>
-                                <option value="5">前端</option>
-                            </select>
-                        </div>
-                        <!--<div class="form-group">-->
-                        <!--<label for="exampleInputFile">封面</label>-->
-                        <!--<input type="file" name="coverImage" id="exampleInputFile">-->
-                        <!--<p class="help-block">添加文章的封面</p>-->
-                        <!--</div>-->
-                    </div>
+    <!--修改模态框-->
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">修改文章属性</h4>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                    <button type="button" id="saveButton" class="btn btn-primary" onclick="modifyArticle()">保存</button>
-                </div>
-            </form>
-            <iframe id="nm_iframe" name="nm_iframe" style="display:none;"></iframe>
-        </div>
-    </div>
-</div>
-<!--修改单个封面图Modal-->
-<!-- Modal -->
-<div class="modal fade" id="coverModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="coverModalLabel">修改文章封面图</h4>
-            </div>
-            <form class="articleForm" action="../updateOneArticleCover" method="post" enctype="multipart/form-data"
-                  target="nm_iframe">
-                <div class="modal-body">
+                <form class="articleForm" action="" method="post" enctype="multipart/form-data"
+                      target="nm_iframe">
                     <div class="modal-body">
-                        <div class="form-group">
-                            <label for="article_cover">文章封面</label>
-                            <input type="file" name="article_cover" class="form-control" id="article_cover">
-                            <input type="hidden" name="id" value="" class="form-control">
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="article_title">文章标题</label>
+                                <input name="article_title" class="form-control" id="article_title" value=""
+                                       placeholder="标题">
+                            </div>
+                            <div class="form-group">
+                                <label for="article_simple_content">简短描述</label>
+                                <input name="article_simple_content" class="form-control" id="article_simple_content"
+                                       value=""
+                                       placeholder="描述">
+                            </div>
+                            <div class="form-group">
+                                <label for="article_author">作者</label>
+                                <input name="article_author" class="form-control" id="article_author" value=""
+                                       placeholder="作者">
+                            </div>
+                            <div class="form-group">
+                                <label for="type_id">文章类型</label>
+                                <!--todo 后端生成文章类型列表-->
+                                <select name="type_id" id="type_id">
+                                    <option value="1">技术杂谈</option>
+                                    <option value="2">Java</option>
+                                    <option value="3">GO</option>
+                                    <option value="4">JavaScript</option>
+                                    <option value="5">前端</option>
+                                </select>
+                            </div>
+                            <!--<div class="form-group">-->
+                            <!--<label for="exampleInputFile">封面</label>-->
+                            <!--<input type="file" name="coverImage" id="exampleInputFile">-->
+                            <!--<p class="help-block">添加文章的封面</p>-->
+                            <!--</div>-->
                         </div>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" onclick="hideCoverModal()"> 提交</button>
-                </div>
-            </form>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button type="button" id="saveButton" class="btn btn-primary" onclick="modifyArticle()">保存
+                        </button>
+                    </div>
+                </form>
+                <iframe id="nm_iframe" name="nm_iframe" style="display:none;"></iframe>
+            </div>
         </div>
     </div>
-</div>
+    <!--修改单个封面图Modal-->
+    <!-- Modal -->
+    <div class="modal fade" id="coverModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="coverModalLabel">修改文章封面图</h4>
+                </div>
+                <form class="articleForm" action="../updateOneArticleCover" method="post" enctype="multipart/form-data"
+                      target="nm_iframe">
+                    <div class="modal-body">
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label for="article_cover">文章封面</label>
+                                <input type="file" name="article_cover" class="form-control" id="article_cover">
+                                <input type="hidden" name="id" value="" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" onclick="hideCoverModal()"> 提交</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
-<!-- 分页 -->
-<nav v-if="showPage" aria-label="Page navigation">
-    <ul class="pagination pagination-md">
-        <li>
-            <a href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        <li onclick="toPage(this)"><a href="#">1</a></li>
-        <li onclick="toPage(this)" v-for="pageNum in page" :pageNum="pageNum"><a href="#">{{pageNum}}</a></li>
-        <li>
-            <a href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
+    <!-- 分页 -->
+    <nav v-if="showPage" aria-label="Page navigation">
+        <ul class="pagination pagination-md">
+            <li>
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li onclick="toPage(this)"><a href="#">1</a></li>
+            <li onclick="toPage(this)" v-for="pageNum in page" :pageNum="pageNum"><a href="#">{{pageNum}}</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 <script type="application/javascript">
     let app = new Vue({
@@ -278,15 +287,18 @@
             })
         }
     }
+
     function updateCover(that) {
         let id = $(that).attr('article-id')
         $('#coverModal input[name="id"]').val(id)
     }
+
     // 隐藏修改图片modal
     function hideCoverModal() {
         $('#coverModal').submit()
         $('#coverModal').modal('hide')
     }
+
     // 显示分页判断
     function showPage(app) {
         // ajax获取数据量
@@ -305,15 +317,15 @@
                     if (count > 5) {
                         app.showPage = true
                         // 每5个分一页
-                        let arr=new Array();
+                        let arr = new Array();
                         let totalPage = parseInt(count / 5)
                         let onePage = totalPage
                         if (count % 5 > 0) {
                             onePage++
                         }
-                        while (onePage > 1)  {
+                        while (onePage > 1) {
                             arr.unshift(onePage)
-                            onePage --
+                            onePage--
                         }
                         app.page = arr
                     }
@@ -322,13 +334,14 @@
         })
 
     }
+
     var toPage = (that) => {
         let pageNum = that.getAttribute('pageNum')
         // let pageNum = $(that).atrr('pageNum')
         // ajax 请求
         //发送get请求
         let limit = 5
-        let offset = (pageNum-1) * limit
+        let offset = (pageNum - 1) * limit
         let param = `?limit=${limit}&offset=${offset}`
         console.log("param", param)
         $.get(getPageArticles + param, function (data, status) {
@@ -347,6 +360,10 @@
             }
         })
 
+    }
+    let writeArticle = function (that) {
+        let id = $(that).attr('article-id')
+        window.location.href = "../mdArticle.html?id=" + id
     }
     initArticle(app)
     // 分页相关逻辑
