--- a/static/html/article.html
+++ b/static/html/article.html
@@ -56,12 +56,13 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" target="nm_iframe">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" name="keyWorld" id="searchInput" class="form-control" placeholder="Search">
                     </div>
-                    <button type="submit" class="btn btn-default">搜索</button>
+                    <button type="submit" class="btn btn-default"  @click="search" >搜索</button>
                 </form>
+                <iframe id="nm_iframe" name="nm_iframe" style="display:none;"></iframe>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><span class="glyphicon glyphicon-user" style="margin-right:10px"></span>注册</a></li>
                     <li><a href="#"><span class="glyphicon glyphicon-link" style="margin-right:10px"></span>登录</a></li>
@@ -160,6 +161,11 @@
                     }
                 })
             },
+            search: () => {
+                let keyWord = $("#searchInput").val()
+                sessionStorage.setItem('keyWord', keyWord)
+                window.location.href = "keyWordSearchResult.html"
+            }
         },
         created: function () {
             this.showArticleHtml(this)
